@@ -1,4 +1,8 @@
 2006-10-08  Joe Casadonte  <jcasadonte@northbound-train.com>
+	* tnt.el: Added a chunk-size variable to make single-file archives
+		  a little more efficient
+
+2006-10-08  Joe Casadonte  <jcasadonte@northbound-train.com>
 	* tnt.el: Added a never-unidle ability (good for hiding)
 	Added optional login ID string in buddy list (for debugging).
 	Added pre- and post-open hooks.
